--- a/mypage.html
+++ b/mypage.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="E:\web\project\mystyle.css">
+    <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" href="mylogo.png">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
